@@ -34,6 +34,7 @@ public class AritcleController {
     private ArticleService articleService = new ArticleServiceImpl();
 
     @Autowired
+    //shouldn't appear here, wait to be removed
     private CategoryService categoryService = new CategoryServiceImpl();
 
     @GetMapping("/api/v1/articles/{id}")
@@ -43,45 +44,66 @@ public class AritcleController {
     }
 
     @GetMapping("/api/v1/articles")
-    public ResponseEntity<Object> getArticles(
-            @RequestParam(required = false) Integer category_id,
-            @RequestParam(required = false) Integer tag_id,
-            @RequestParam(required = false) String article_name,
-            @RequestParam(required = false) String with_content) {
-        Boolean flag_content = false;
-        if(with_content != null) {
-            flag_content = new Boolean(with_content);
-        }
+    public ResponseEntity<Object> getArticles(@RequestParam(required = false) Integer categoryId,
+                                              @RequestParam(required = false) Integer tagId,
+                                              @RequestParam(required = false) String articleName,
+                                              @RequestParam(required = false) String withContent) {
+        //valueOf include null --> false
+        Boolean flagContent = Boolean.valueOf(withContent);
 
-        if(article_name != null) {
-            Article article = articleService.getArticleByName(article_name);
+        if(articleName != null) {
+            Article article = articleService.getArticleByName(articleName);
             return new ResponseEntity<>(article, HttpStatus.OK);
         }
 
-        //currently, nobody need us to do this
-        if(category_id != null && tag_id != null) {
-            Error error = new Error(800, "category_id and tag_id conflict!", "you can only choose one of them.");
-            return new ResponseEntity<>(error, HttpStatus.INTERNAL_SERVER_ERROR);
+        //currently, nobody has this require
+        if(categoryId != null && tagId != null) {
+            Error error = new Error(800,"categoryId and tagId are conflict!",
+                    "you can only choose one of them.");
+            return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
         }
 
-        List<Article> articles = new ArrayList<Article>();
-        if(tag_id != null) {
-            articles = articleService.getArticlesByTagId(tag_id, flag_content);
+        if(tagId != null) {
+            List<Article> articles = articleService.getArticlesByTagId(tagId, flagContent);
             return new ResponseEntity<>(articles, HttpStatus.OK);
         }
 
-        if(category_id != null) {
-            Category root = categoryService.getCategoryRecurively(category_id);
+        if(categoryId != null) {
+            List<Article> articles = new ArrayList<>();
+            Category root = categoryService.getCategoryRecurively(categoryId);
             List<Category> descendants = categoryService.getDescendants(root);
             for(Category category : descendants) {
-                List<Article> temp = articleService.getArticlesByCategoryId(category.getId(), flag_content);
+                List<Article> temp = articleService.getArticlesByCategoryId(category.getId(), flagContent);
                 articles.addAll(temp);
             }
             return new ResponseEntity<>(articles, HttpStatus.OK);
         }
 
-        articles = articleService.getAllArticles(flag_content);
+        List<Article> articles = articleService.getAllArticles(flagContent);
         return new ResponseEntity<>(articles, HttpStatus.OK);
+   }
+
+   private Map<String, Object> getArticle(MultipartFile article) throws IOException {
+       Map<String, Object> map = new HashMap<>();
+       map.put("content", article.getBytes());
+       String name = article.getOriginalFilename();
+       if(name != null && !name.isEmpty()) {
+           name = name.substring(0, name.lastIndexOf("."));
+           map.put("name", name);
+       }
+       return map;
+   }
+
+   private List<Map<String, Object>> getImages(List<MultipartFile> images) throws IOException {
+       List<Map<String, Object>> items = new ArrayList<>();
+       for (MultipartFile image : images) {
+           Map<String, Object> item = new HashMap<>();
+           String name = image.getOriginalFilename();
+           item.put("name", name);
+           item.put("content", image.getBytes());
+           items.add(item);
+       }
+       return items;
    }
 
     @PutMapping("/api/v1/articles/{id}")
@@ -91,27 +113,16 @@ public class AritcleController {
             @RequestParam(value = "cid", required = false) Integer cid,
             @RequestParam(value = "tags", required = false) String tags,
             @RequestParam(value = "description", required = false) String description) throws IOException {
-        Map<String, Object> map = new HashMap<String, Object>();
+        Map<String, Object> map = new HashMap<>();
 
         if(article != null) {
-            map.put("content", article.getBytes());
-            String name = article.getOriginalFilename();
-            if(name != null) {
-                name = name.substring(0, name.lastIndexOf("."));
-                map.put("name", name);
-            }
+            Map<String, Object> temp = getArticle(article);
+            map.put("content", temp.get("content"));
+            map.put("name", temp.get("name"));
         }
 
         if(images != null) {
-            List<Map<String, Object>> items = new ArrayList<>();
-            for (MultipartFile image : images) {
-                Map<String, Object> item = new HashMap<>();
-                String name = image.getOriginalFilename();
-                item.put("name", name);
-                item.put("content", image.getBytes());
-                items.add(item);
-            }
-            map.put("images", items);
+            map.put("images", getImages(images));
         }
 
         if(cid != null) {
@@ -127,6 +138,9 @@ public class AritcleController {
         }
 
         Article res = articleService.updateArticle(id, map);
+        if(res == null) {
+            return new ResponseEntity<>(null, HttpStatus.INTERNAL_SERVER_ERROR);
+        }
         return new ResponseEntity<>(res, HttpStatus.OK);
     }
 
@@ -138,41 +152,14 @@ public class AritcleController {
             @RequestParam(value = "description", required = false) String description) throws IOException {
         Map<String, Object> map = new HashMap<String, Object>();
 
-        if(article == null) {
-            Error error = new Error(404, "article is required.", "article is needed when insert article.");
-            return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
-        }
-        map.put("content", article.getBytes());
-        String name = article.getOriginalFilename();
-        if(name != null) {
-            name = name.substring(0, name.lastIndexOf("."));
-            map.put("name", name);
-        }
-        
-        if(images == null) {
-            Error error = new Error(404, "images is required.", "article abstract need an image as background.");
-            return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
-        }
-        List<Map<String, Object>> items = new ArrayList<>();
-        for (MultipartFile image : images) {
-            Map<String, Object> item = new HashMap<>();
-            String image_name = image.getOriginalFilename();
-            item.put("name", image_name);
-            item.put("content", image.getBytes());
-            items.add(item);
-        }
-        map.put("images", items);
+        Map<String, Object> temp = getArticle(article);
+        map.put("content", temp.get("content"));
+        map.put("name", temp.get("name"));
 
-        if(cid == null) {
-            Error error = new Error(404, "cid is required.", "article must belong to a category.");
-            return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
-        }
+        map.put("images", getImages(images));
+
         map.put("cid", cid);
 
-        if(tags == null) {
-            Error error = new Error(404, "tags is required.", "article at least belong to one tag.");
-            return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
-        }
         map.put("tags", tags);
      
         if(description != null) {
@@ -180,6 +167,9 @@ public class AritcleController {
         }
 
         Article res = articleService.insertArticle(map);
+        if(res == null) {
+            new ResponseEntity<>(null, HttpStatus.INTERNAL_SERVER_ERROR);
+        }
         return new ResponseEntity<>(res, HttpStatus.OK);
     }
 
@@ -188,4 +178,13 @@ public class AritcleController {
         articleService.deleteArticle(id);
         return new ResponseEntity<>(null, HttpStatus.NO_CONTENT);
     }
+
+    /*todo 批量删除，按照模糊条件删除
+    @DeleteMapping("/api/v1/articles")
+    public ResponseEntity<Object> deleteArticles(@RequestParam(required = false) Integer categoryId,
+                                              @RequestParam(required = false) Integer tagId,
+                                              @RequestParam(required = false) String articleName,
+                                              @RequestParam(required = false) String withContent) {
+        return new ResponseEntity<>(null, HttpStatus.NO_CONTENT);
+    }*/
 }
